feat(lease): 支持首期账单按合同创建日或起租日计费
- 在账单生成逻辑中新增contractCreateDate字段，区分合同创建时间
- 首期账单计算中，新增根据首期账单日配置跟随合同创建日的场景处理
- 调整押金应收日期计算，支持首期押金跟随合同创建日
- 优化提前收租时应收日不能早于合同起租日的逻辑
- 新增单元测试覆盖首期账单跟随合同创建日和起租日的多种场景
- 为LeaseDTO新增相关租约时间及收租相关属性，并增加Swagger文档说明
- 引入Mockito依赖，完善测试用例与仓库mock配置
- 修正一次性支付费用账单金额计算逻辑，避免按月份累计